indico/web/client/styles/modules/_category.scss
/* ... */
ul.category-resource-qtip {
  list-style: none;
  padding-left: 0;
  margin: 0;
  color: #888;
  font-size: 11px;
  line-height: 15px;
}

#eventCreationForm {
  .form-group {
    .form-field {
      padding: 0;
    }
  }
}

.event-list {
  h3 {
    color: #555;
    font-weight: normal;
    font-size: 18px;
    margin-top: 20px;
    margin-left: 40px;
    padding: 0;
    border-bottom: 1px solid #ebebeb;

    &.current-month {
      border-bottom: 1px solid #aaa;

      span {
        padding: 5px 5px 0 5px;
        color: #2f2506;
        background-color: #f6e8bd;
        border-radius: 5px 5px 0 0;
        border-bottom: 1px solid #aaa;
      }
    }
  }

  ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
    display: block;
  }

  li {
    margin: 0 0 10px 60px;
    padding: 0;
    display: flex;
    align-items: baseline;

    .list-name {
      display: flex;
      align-items: baseline;
    }

    .date {
      padding: 5px;
      margin-right: 10px;
      font-size: 13px;
      color: #444;
      flex-shrink: 0;
    }

    .event-icons {
      padding: 0 15px;
      font-size: 1.2em;
      white-space: nowrap;
      color: var(--text-secondary-color);
      max-width: 56px;
      min-width: 56px;

      a,
      a:hover {
        color: var(--text-secondary-color);
      }
    }

    .list-name a {
      @extend %link;
      font-size: 17px;
    }

    .today {
      font-size: 13px;
      color: #444;
      background-color: #f6e8bd;
      border-radius: 5px;
    }

    .protected {
      font-weight: normal;
      color: var(--text-secondary-color);
    }

    .ui.label {
      text-transform: uppercase;
      vertical-align: 20%;
    }
  }
}

.category-overview {
  width: calc(100vw - 300px);

  > .title {
    height: 30px;

    .text {
      font-size: 1.2em;
      font-style: italic;
      margin-left: 5px;
      margin-right: 5px;
    }

    .navigation a {
      padding: 5px;
    }
  }

  .category-table {
    display: block;
    overflow-x: auto;

    > table:not(.day) {
      border: 1px solid #aaa;
      border-collapse: separate;
      border-spacing: 1px;

      tr {
        background-color: #eee;
      }
    }

    table {
      width: 100%;
      border-collapse: collapse;

      th {
        background-color: #444;
        color: #fff;
        text-align: center;
        font-weight: normal;
        white-space: nowrap;
        padding: 1px 15px;
      }
    }

    td {
      padding: 0;
      vertical-align: top;

      &.day {
        vertical-align: top;
        padding: 5px;

        &:not(:empty) {
          min-width: 180px;
        }

        > .calendar-date {
          font-size: 1.5em;
          font-weight: bold;
          text-align: center;

          a {
            color: #aaa;
          }
        }

        table {
          tr {
            background-color: white;

            td {
              font-size: inherit;

              &.content-info {
                padding-left: 10px;
              }

              .location-info,
              .persons {
                font-size: 0.8em;
              }
            }
          }
        }
      }

      &.other-month {
        background-color: white;
      }
    }

    tr.event {
      & > td {
        padding: 8px 3px;
        font-size: 1.1em;
      }

      &:not(:first-of-type) td {
        border-top: 1px dotted #aaa;
      }

      .title .ui.label {
        text-transform: uppercase;
      }

      .category-icon {
        float: right;
        margin-left: 3px;
      }
    }

    td.time {
      font-style: italic;
      white-space: nowrap;
      width: 40px;
    }

    td.content-info {
      padding-left: 20px;

      table.timetable-entries {
        tr {
          &.contribution {
            background-color: #deebf8;
          }

          &.session {
            background-color: #fff1d5;
          }

          &.break {
            background-color: #e0ecd2;
          }

          &:not(:first-of-type) {
            td {
              border-top: 1px dashed #aaa;
            }
          }

          td {
            padding: 3px 2px;
          }
        }
      }
    }

    .location-info {
      max-width: 220px;
      text-overflow: ellipsis;
      overflow: hidden;
      color: darkblue;
    }

    .persons {
      color: darkgreen;
    }
  }
}

.category-overview-side-menu {
  .ui-datepicker {
    width: 192px;
  }

  #display-options {
    .form-group {
      margin-bottom: 1em;

      & > div {
        padding: 0;
        margin: 0;
      }
    }

    .form-label {
      min-height: 2em;
    }

    select {
      width: 100%;
    }
  }
}

.category-calendar-side-menu {
  .ui-datepicker {
    width: 192px;
  }
}

.category-calendar-page {
  @include indico-page();

  .DateInput_input {
    height: 34px;
  }

  .category-calendar-view {
    font-family: 'Roboto', sans-serif;

    .fc {
      line-height: normal;
    }

    // limit size of "more events" popover
    .fc-more-popover {
      max-height: 95%;
      max-width: 30%;
      overflow-y: auto;
    }

    // <a> elements used for day headers aren't links
    a.fc-col-header-cell-cushion,
    a.fc-daygrid-day-number {
      cursor: default;
      color: $black;
    }

    .fc-header-toolbar {
      .fc-button {
        // pretend it's an i-button...
        @include button();
        @include transition(color);
        @include i-button-states(
          $i-button-background-color,
          $default-border-color,
          $gray,
          $light-black,
          $black,
          false
        );

        &:disabled,
        &.disabled {
          @include button-disabled();
        }
      }

      .ongoing-events-info {
        font-style: italic;
        line-height: 2.1em;
        margin-right: 5px;
      }
    }
  }
}

.ongoing-events-dialog,
.all-events-dialog {
  max-height: 600px !important;
  overflow-y: scroll;

  ul {
    list-style-type: none;
    padding: 0 10px;
    margin-top: 0;
  }
}
/* ... */

